salesforce-integration/Salesforce-Components/objects/Auth0_API_Token__c/Auth0_API_Token__c.object-meta.xml
<CustomObject>
    <label>Auth0 API Token</label>
    <nameField>
        <displayFormat>API-{00000}</displayFormat>
        <label>Riggo API Token Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auth0 API Token</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>