salesforce-integration/Salesforce-Components/objects/Auth0_API_Token__c/fields/Client_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Key__c</fullName>
    <label>Client Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>