salesforce-integration/Salesforce-Components/objects/Auth0_API_Token__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>