salesforce-integration/Salesforce-Components/objects/Auth0_API_Token__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <type>Url</type>
</CustomField>